- Style: quick alignment fix for required/info icons in labels

--- a/RockWeb/Styles/_forms.less
+++ b/RockWeb/Styles/_forms.less
@@ -238,12 +238,12 @@ a.aspNetDisabled.picker-label,
 .form-group.required > .control-label,
 .required-indicator {
   &::before {
-    margin-right: 0;
+    margin-right: var(--spacing-tiny);
     font-family: @fa-font-face;
     font-size: 6px;
     font-weight: @fa-theme-weight;
     color: @required-field-color;
-    vertical-align: middle;
+    vertical-align: top;
     content: @fa-var-circle;
   }
 }
