--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -340,7 +340,7 @@ iframe {
 
 // context help
 a.help {
-  margin-left: 0;
+  margin-left: 2px;
   color: @help-color;
   outline: 0;
 }
