--- a/RockWeb/Styles/styles-v2/components/_forms.scss
+++ b/RockWeb/Styles/styles-v2/components/_forms.scss
@@ -322,12 +322,12 @@ output {
 
 // Moved from _checkin-core.less
 .form-group.required > .control-label::before {
-  margin-right:    0;
+  margin-right:    2px;
   font-family:    'tabler-icons';
-  font-size:      10px;
+  font-size:      var(--font-size-small);
   font-weight:    var(--font-weight-black);
   color:          var(--color-danger-strong);
-  vertical-align: middle;
+  vertical-align: baseline;
   content:        '\f698';
 }
 // ===============
@@ -509,9 +509,13 @@ select.form-control {
 }
 
 a.help {
-  margin-left:  0;
+  margin-left:  var(--spacing-tiny);
   color:        var(--color-interface-medium);
   outline:      0;
+}
+
+a.help i {
+  font-size: 15px;
 }
 
 a.warning {
